--- a/akoni/asset/style.css
+++ b/akoni/asset/style.css
@@ -1,4 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Kolker+Brush&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+    scroll-behavior: smooth;
+    box-sizing: border-box;
+}
 
 body {
     font-family: Arial, sans-serif;
@@ -32,10 +38,20 @@ header a {
     color: #fff;
     text-decoration: none;
     margin-right: 100px;
+    transition: font-size 0.3s ease;
+}
+
+header a:hover {
+    opacity: 0.9;
+    color: #FFFFFF; /* Highlight color on hover */
+    font-size: 23px;
+    text-shadow: 2px 2px 9px rgba(150, 243, 182, 0.8);
+    opacity: 1;
 }
 
 main {
     display: flex;
+    width: 100vw;
 }
 
 .p {
@@ -82,3 +98,37 @@ footer {
     text-align: left;
     display: block;
 }
+
+.about-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: left;
+    padding: 20px;
+}
+
+.profile-image {
+    border-radius: 50%;
+    margin-right: 20px;
+    width: 150px; /* Adjust the size as needed */
+    height: 150px; /* Adjust the size as needed */
+}
+
+.about-text {
+    max-width: 600px;
+}
+
+.visible-section {
+    transform: translateX(0);
+    opacity: 1;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+}
+
+.hidden-section {
+    transform: translateX(-100%);
+    opacity: 0;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+}
+
+/* Add any other styles as needed */
+
